--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "description": "API Authentication with Node - youtube",
   "main": "app.js",
+  "scripts": {
+    "dev": "yarn nodemon app.js"
+  },
   "author": "Brent <brentgreeff@gmail.com>",
   "license": "MIT",
   "private": false,
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "express-promise-router": "^3.0.3",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.0"
   }
