--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "@hapi/joi": "^15.0.3",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "express-promise-router": "^3.0.3",
+    "mongoose": "^5.5.9",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.0"
   }
