--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.9",
     "morgan": "^1.9.1",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0"
   }
 }
