--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": false,
   "dependencies": {
     "@hapi/joi": "^15.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "express-promise-router": "^3.0.3",
@@ -19,6 +20,7 @@
     "morgan": "^1.9.1",
     "nodemon": "^1.19.0",
     "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   }
 }
