--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API Authentication with Node - youtube",
   "main": "app.js",
   "scripts": {
-    "dev": "yarn nodemon app.js"
+    "dev": "yarn nodemon server.js"
   },
   "author": "Brent <brentgreeff@gmail.com>",
   "license": "MIT",
