--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "timekeeper": "^2.2.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
